[DEV] Add endpoint for user stats
